<resources>
    <string name="app_name">Jtern</string>
    <string name="point1">Joining a company as an intern gives you the opportunity to work hands on in a professional environment. As an intern you\'re not just there to get coffee or run errands but you\'re there to gain actual work experience. Internships help by teaching you more about the career path you are pursuing. Think of it like this – internships are a way to test drive possible jobs and explore different career options.</string>
    <string name="point2">Internships often give you the opportunity to attend meetings and events. By interacting with professionals you gain new connections and learn how to communicate in a professional environment. Personally, my internships have introduced me to a lot of useful resources and have given me the opportunity to meet a variety of professionals in my field. Networking has helped me acquire references and find new job opportunities. Internships can even provide you with a professional mentor.</string>
    <string name="point3">As a college student I know the importance of a strong resume. Without a solid resume it can be tougher to be considered for a position. And how can you have a strong resume without any experience? Internships are key to building experience as a student or recent graduate. Employers are much more likely to hire someone with internships and work experience rather than someone with a generic resume, lacking experience.</string>
    <string name="point4">As an intern you\'ll become a master of time management. When you\'re working in a fast paced professional environment you need to know every minute counts. Time management is vital in every circumstance whether you\'re attending meetings, finishing tasks on deadlines, making phone calls, picking up your boss\' dry cleaning or walking their dog (just kidding about those last two).</string>
    <string name="point5">Internships provide you with the building blocks you need for your future. Many internship opportunities help set the foundation for your career. It is important that you choose you internships based on your interests and career prospects. As an intern you have the opportunity to get your foot in the door with a company. Keep in mind, employers often use internships as a recruitment tool to test out future employees and in many cases, companies hire interns after graduation.</string>
    <string name="alert">Alert !!!</string>
    <string name="alert_text">You have revoked our policies for which you will not be able to view your account or upload any files.\nIf you think we are mistaken contact our Admin for regaining access to your account.</string>
    <string-array name="sub">
        <item>Core Java</item>
        <item>Adv Java</item>
        <item>Android</item>
    </string-array>
</resources>
